--- a/public/index.html
+++ b/public/index.html
@@ -2,11 +2,11 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link rel="icon" href="%PUBLIC_URL%/favicon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />    
     <meta
       name="description"
-      content="A simple web app designed to teach pre-school children their letters"
+      content="A simple web app designed to teach toddlers their letters using phonics"
     />  
     <!--
       manifest.json provides metadata used when your web app is installed on a
@@ -22,7 +22,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>Pre-school Letter Game</title>
+    <title>Toddler Phonics Letter Game</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
