--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,7 @@
     
     <title>Toddler Phonics Letter Game</title>
   </head>
-  <body>
+  <body oncontextmenu="return false;">
     <noscript>You need to enable JavaScript to run this app.</noscript>    
 
     <div id="root"></div>
