Fix for router not refreshing Render items according to the selected letters

--- a/public/index.html
+++ b/public/index.html
@@ -11,6 +11,7 @@
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     
     <title>Toddler Phonics Letter Game</title>
+    <base href="/">
   </head>
   <body oncontextmenu="return false;">
     <noscript>You need to enable JavaScript to run this app.</noscript>    
